--- a/example.yaml
+++ b/example.yaml
@@ -174,6 +174,13 @@ signalfx_endpoint_base: "https://ingest.signalfx.com"
 # The tag we'll add to each metric that contains the hostname we came from
 signalfx_hostname_tag: "host"
 
+# == X-Ray ==
+# X-Ray can be a sink for trace spans.
+
+# If present, X-Ray will be enabled as a tracing sink
+trace_xray_address: "localhost:2000"
+
+
 # == LightStep ==
 # LightStep can be a sink for trace spans.
 
